search box alignment fix

--- a/src/ui/styles.css
+++ b/src/ui/styles.css
@@ -140,6 +140,8 @@ form {
 }
 
 fieldset {
+  display: flex;
+  align-items: center;
   border: 0;
 }
 
